# FolderColorizerRust

./: Cargo.toml  PLAN.md  README.md
src/: app.rs  color.rs  context_menu.rs  events.rs  icon.rs  library.rs  main.rs  render.rs
